# Shiftlens-time-series-state-identification

./: .coderabbit.yaml  .gitignore  ATTRIBUTION.md  NOTICE  README.md  pyproject.toml
docs/: CONTEXT.md  PROJECT_SCOPE.md  PUBLIC_BOUNDARY.md  ROADMAP.md  STATE_EVIDENCE_CORE.md  STATE_EXTRACTION_NORTH_STAR.md
examples/toy_state_shift/: README.md  run_demo.py
src/shiftlens/: __init__.py  cli.py
src/shiftlens/data/: __init__.py  toy.py
src/shiftlens/diagnostics/: __init__.py  rejection.py  support.py
src/shiftlens/features/: __init__.py  base.py  basic.py
src/shiftlens/reports/: __init__.py  schema.py  writer.py
src/shiftlens/states/: __init__.py  extractor.py  model.py
tests/: test_basic_features.py  test_cli.py  test_rejection_records.py  test_report_writer.py  test_state_extractor.py  test_support_diagnostics.py  test_toy_data.py
