[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shiftlens"
version = "0.1.0"
description = "Toolkit for state visibility and reproducible diagnostics in noisy time-series data."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "ShiftLens contributors" }
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "numpy"
]

[project.optional-dependencies]
dev = [
  "pytest"
]

[project.scripts]
shiftlens = "shiftlens.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
